--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <title>A C R O B</title>
         <meta name="description" content="" />
-        <link href="still-there.css" type="text/css" rel="stylesheet">
+        <link href="style.css" type="text/css" rel="stylesheet">
         <script type="text/javascript" src="jquery-1.7.min.js"></script>
         <script type="text/javascript" src="footnotes.js"></script>
     </head>
@@ -14,22 +14,17 @@
             
 
 <header>
-    <h1><span class="author">Andrew Robinson</span><br><span><a href="./">Andrew's Webpage</a></span></h1>
+    <h1><span class="author">Andrew Robinson</span><span></h1>
     <ol class="nav">
     <li id="lintro"><span><a href="intro.html">About</a></span></li>
-    <li id="lgeocities"><span><a >Greece 2018</a></span></li>
-    <li id="lbelhuizen"><span><a href="belhuizen.html">Spain 2019</a></span></li>
-    <li id="lhyves"><span><a href="hyves.html">Rhine 2019</a></span></li>
     </ol>
 </header>
 
 <div id="main">
 
-<p>This is my personal webpage. Articles on my trips taken by bike, train and plane are archived below:</p>
+<p>This is my personal webpage. Articles on my trips taken by bike, train and plane are archived here.</p>
 
 
-
-<div class="next"><a href="dimensions-1.html">➔</a></div>
 
 </div>
 <div class="footnotes">
