--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>A C R O B</title>
+        <title>A C Robinson</title>
         <meta name="description" content="" />
         <link href="style.css" type="text/css" rel="stylesheet">
         <script type="text/javascript" src="jquery-1.7.min.js"></script>
@@ -16,7 +16,10 @@
 <header>
     <h1><span class="author">Andrew Robinson</span><span></h1>
     <ol class="nav">
-    <li id="lintro"><span><a href="intro.html">About</a></span></li>
+    <li id="about"><span><a href="about.html">About</a></span></li>
+    <li id="greece"><span><a href="greece.html">Greece 2018</a></span></li>
+    <li id="spain"><span><a href="spain.html">Spain 2019</a></span></li>
+    <li id="rhine"><span><a href="rhine.html">Rhine 2019</a></span></li>
     </ol>
 </header>
 
