--- a/greece.html
+++ b/greece.html
@@ -28,7 +28,7 @@
 </div>
 <div class="footnotes">
     <ol>
-       <li id="fn1">There are currently no footnotes on this page</a> <a class="back" href="#fnl1">↑</a></li>
+       <li id="fn1">There are currently no footnotes on this page - test v2</a> <a class="back" href="#fnl1">↑</a></li>
        
     </ol>
 </div>
