--- a/index.html
+++ b/index.html
@@ -1,46 +1,18 @@
-
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>A C Robinson</title>
-        <meta name="description" content="" />
-        <link href="style.css" type="text/css" rel="stylesheet">
-        <script type="text/javascript" src="jquery-1.7.min.js"></script>
-        <script type="text/javascript" src="footnotes.js"></script>
-    </head>
-    <body>
-        <div id="page">
-            
+<html>
+	<head>
+		<title>Andrew's Test Splash Page</title>
+	</head>
 
-<header>
-    <h1><span class="author">Andrew Robinson</span><span></h1>
-    <ol class="nav">
-    <li id="about"><span><a href="about.html">About</a></span></li>
-    <li id="greece"><span><a href="greece.html">Greece 2018</a></span></li>
-    <li id="spain"><span><a href="spain.html">Spain 2019</a></span></li>
-    <li id="rhine"><span><a href="rhine.html">Rhine 2019</a></span></li>
-    </ol>
-</header>
+<p>
+<a href="https://acrob.github.io/splash.html/">
+<img border="0" alt="W3Schools" src="<blockquote class="imgur-embed-pub" lang="en" data-id="a/ZwhDSlO" data-context="false" ><a href="//imgur.com/a/ZwhDSlO">ar_upload_1</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>" width="100" height="100">
+</a>
 
-<div id="main">
-
-<p>This is my personal webpage. Articles on my trips taken by bike, train and plane are archived here.</p>
-
-
-
-</div>
-<div class="footnotes">
-    <ol>
-       <li id="fn1">There are currently no footnotes on this page</a> <a class="back" href="#fnl1">↑</a></li>
-       
-    </ol>
-</div>
-
-
-
-
-
-        </div>
-    </body>
+</p>
+	<body>
+		<div>
+			<p>Let's see if this works	</p>
+		</div>
+	</body>
 </html>
