--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
 		<title>Andrew's Test Splash Page</title>
 	</head>
 
-<p>
-<a href="https://acrob.github.io/splash.html/">
-<img border="0" alt="W3Schools" src="<blockquote class="imgur-embed-pub" lang="en" data-id="a/ZwhDSlO" data-context="false" ><a href="//imgur.com/a/ZwhDSlO">ar_upload_1</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>" width="100" height="100">
-</a>
+<style>
+img {
+  width: 100%;
+}
+</style>
+</head>
+<body>
+
+<a href="https://acrob.github.io/spash.html/">
+
+<img src="https://imgur.com/0Wi1BvX" width="128" height="128">
+
+<img src="https://imgur.com/0Wi1BvX" style="width:128px;height:128px;">
+
+
 
 </p>
 	<body>
